--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kexec",
+  "name": "@jcoreio/kexec",
   "version": "3.0.0",
   "description": "Replace your Node.js process with another process. Like Ruby exec.",
   "homepage": "https://github.com/jprichardson/node-kexec",
@@ -22,13 +22,14 @@
   "license": "MIT",
   "main": "./index",
   "engines": {
-    "node": ">=0.10"
+    "node": ">=8"
   },
   "devDependencies": {
     "mocha": "^7.1.1",
     "standard": "^14.3.3"
   },
   "dependencies": {
-    "nan": "^2.14.0"
+    "bindings": "^1.5.0",
+    "node-addon-api": "^2.0.0"
   }
 }
